# urbanopt-example-geojson-project

./: .gitignore  .rubocop.yml  CHANGELOG.md  Gemfile  Jenkinsfile  LICENSE  LICENSE.md  README.md  Rakefile  baseline_scenario.csv  developer_nrel_key.rb  example_feature_file.rb  example_geometry.geojson  example_project.json  exportGeo.json  high_efficiency_scenario.csv  industry_denver.geojson  mixed_scenario.csv  runner.conf  uo
.github/: ci.yml
doc_templates/: copyright_erb.txt  copyright_js.txt  copyright_ruby.txt
example_project/: Gemfile  Temperature_Adjusted_scenario.csv  Temperature_Adjusted_scenario_full.csv  baseline_scenario.csv  chilled_water_storage_scenario.csv  createbar_scenario.csv  electrical_fixed.json  evcharging_scenario.csv  example_project.json  example_project_combined.json  flexible_hot_water_scenario.csv  floorspace_scenario.csv  gather_results_generate_csv.rb  mixed_scenario.csv  (+9 more)
example_project/resources/residential-measures/postprocessing/: .gitignore  README.md  pyproject.toml
example_project/resources/residential-measures/postprocessing/resstockpostproc/: __init__.py  __version__.py  get_failures.py  income_mapper.py  process_bsb_results.py  process_metadata.py  utils.py
example_project/resources/residential-measures/postprocessing/resstockpostproc/resources/gisdata/: county_lookup_table.csv
example_project/resources/residential-measures/postprocessing/resstockpostproc/resources/income_maps/: income_bin_representative_values_by_Occupants_FederalPovertyLevel.parquet
example_project/resources/residential-measures/postprocessing/resstockpostproc/resources/publication/: sdr_column_definitions.csv
example_project/resources/residential-measures/postprocessing/tests/: test_data_dictionary.py  test_income_mapping.py
(+334 files in other folders)
